<resources>
    <!-- App-->
    <string name="app_name" translatable="false">Capital Booze</string>
    <string name="version_name" translatable="false">05/10/2019</string>

    <!-- Navigation (drawer and toolbar)-->
    <string name="drawer_open" translatable="false">Open fragment navigation drawer.</string>
    <string name="drawer_close" translatable="false">Close fragment navigation drawer.</string>

    <string name="nav_next">Next</string>
    <string name="nav_back">Back</string>

    <string name="nav_about">About Capital Booze</string>
    <string name="nav_prices">Prices</string>
    <string name="nav_graph">Graph</string>
    <string name="nav_explanation">Explanation</string>
    <string name="nav_log_in">Log in / out</string>
    <!--<string name="nav_exit">Exit app</string>-->

    <string name="crew_only" translatable="false">Crew only</string>
    <string name="nav_order">Place orders</string>

    <string name="nav_admin_only" translatable="false">Admin only</string>
    <string name="nav_drink">Add drinks</string>
    <string name="nav_counters">Counters and statistics</string>

    <!-- Not connected error-->
    <string name="not_connected_error">Error: not connected!\nConnect to internet and restart the app.</string>

    <!-- Firebase-->
    <string name="url" translatable="false">https://capital-booze.firebaseio.com/</string>

    <!-- fragment_about-->
    <string name="about" translatable="false">by\nMoeder\nPeerdevisscher</string>
    <string name="developer" translatable="false">Developer\ngartangh\ngarben.tanghe@gmail.com</string>
    <string name="logo_of_MP">Logo of Moeder Peerdevisscher.</string>

    <!-- fragment_prices-->
    <string name="updated">Updated at\n%s</string>
    <string name="no_data_yet">No data yet</string>
    <string name="wolf">Wolf of Capital Booze:\n%1$s\n%2$d drinks</string>
    <string name="all_time_wolf">All time wolf:\n%1$s\n%2$d drinks</string>
    <string name="sold" translatable="false">SOLD</string>
    <string name="out" translatable="false">OUT</string>

    <!-- fragment_graph-->
    <string name="drink">Drink</string>
    <string name="time">Time</string>
    <string name="price">Price</string>

    <!-- fragment_explanation-->
    <string name="explanation">If you never before heard of a\nstock exchange themed party:\nthis party is a party like another,\nwith 1 big difference.\nThe prices of the drinks are variable!\n\nAccording to the principle of \nsupply and demand,\nprices will change all the time.\nWhen, in an interval, a specific drink\nis sold a lot, its price wil go up.\nThe other way around too: when a drink\nis sold less for a period of time,\nits price will go down.\nThis makes sure you\'ll be able to\nbuy your favorite drink\nat a bargain price.\n\nDuring the whole evening,\nprices will be displayed live.\nSo you can always make the best choice.\nThis app helps you with\nkeeping track of the prices.</string>

    <!-- fragment_log_in-->
    <string name="logged_out">Logged out</string>
    <string name="loading" translatable="false">Loading…</string>
    <string name="firebase_status_fmt" translatable="false">ID: %s</string>
    <string name="get_custom_token" translatable="false">Get token</string>
    <string name="log_in">Log in</string>
    <string name="create_account">Create account</string>
    <string name="log_out">Log out</string>
    <string name="hint_email" translatable="false">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="auth_failed_error">Error: authentication failed!\nTry again.</string>
    <string name="emailpassword_status_fmt" translatable="false">E-mail: %s</string>
    <string name="emailpassword_title_text">E-mail and password</string>
    <string name="get_accounts_granted">Permission to accounts granted.</string>
    <string name="get_accounts_denied">Permission to accounts denied.</string>

    <!-- fragment_order-->
    <string name="total_price">Total price</string>
    <string name="total_squares">Total squares</string>
    <string name="total_count">Total count</string>
    <string name="order">Order</string>
    <string name="new_wolf">New wolf of Capital Booze!</string>
    <string name="new_all_time_wolf">New all time wolf of Capital Booze!</string>
    <string name="nothing_to_order_or_party_not_started">Nothing to order or the party has not started yet.</string>
    <string name="nothing_to_order">Nothing to order.</string>
    <string name="party_not_started">The party has not started yet.</string>

    <!-- fragment_drink-->
    <string name="name">Name</string>
    <string name="starting_price">Starting price</string>
    <string name="min" translatable="false">Minimum</string>
    <string name="max" translatable="false">Maximum</string>
    <string name="invalid_length" translatable="false">Min 2 letters</string>
    <string name="already_used">Already in use</string>
    <string name="invalid_min_price" translatable="false">Min €1.00</string>
    <string name="invalid_min">Min smaller than price</string>
    <string name="invalid_max_price" translatable="false">Max €60.00</string>
    <string name="invalid_max">Max greater than price</string>
    <string name="add">Add</string>
    <string name="could_not_add_drink_error">Error: could not add drink!\nSome properties are wrong\nor the party has already begun.</string>

    <!-- fragment_counters-->
    <string name="total">Total</string>

    <!-- fragment_admin_only-->
    <string name="start">Start</string>
    <string name="timertask">TimerTask set, interval set for %d minutes.</string>
    <string name="task_executed">Task executed.</string>
    <string name="crash" translatable="false">Crash</string>
    <string name="crash_executed">Crash executed!</string>
    <string name="crash_not_executed_error">Error: crash not executed!\nWait %d more minutes.</string>
    <string name="party_already_started_error">Error: the party already started!</string>
    <string name="party_not_started_error">Error: the party not started yet!</string>
    <string name="type_wolf_here">New wolf</string>
    <string name="type_allTimeWolf_here">New all time wolf</string>

</resources>
