<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminOnlyFragment"
    android:gravity="center_horizontal">

    <EditText
        android:id="@+id/mTypeWolfHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/type_wolf_here"
        android:textSize="24sp"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/mTypeAllTimeWolfHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/type_allTimeWolf_here"
        android:textSize="24sp"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:text="@string/start"
                android:id="@+id/mStart"
                android:background="@drawable/round_green"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="@android:color/primary_text_dark"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2dp" />

            <Button
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:text="@string/crash"
                android:id="@+id/mCrash"
                android:background="@drawable/round_red"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="@android:color/primary_text_dark"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2dp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start">

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/admin_only_back"
            android:text="@string/nav_back"/>

    </LinearLayout>

</LinearLayout>
