<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ap="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tanghe.garben.capitalbooze.GraphFragment"
    android:orientation="vertical">

    <com.androidplot.xy.XYPlot
        style="@style/APDefacto.Light"
        android:id="@+id/plot"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        ap:rangeLabel="@string/price"
        ap:domainLabel="@string/time"
        ap:borderColor="@color/white"
        ap:backgroundColor="@color/white"
        ap:borderThickness="0dp"
        ap:labelTextColor="@color/grey"
        ap:markupEnabled="false" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/graph_back"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/nav_back" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="UselessLeaf" />

    </LinearLayout>

</LinearLayout>
