<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CountersFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalLayoutTotal"
        android:elevation="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mTotal"
            android:textSize="24dp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:layout_gravity="right"
            android:text="@string/total" />

        <TextView
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:id="@+id/mCountTotal"
            android:textSize="24dp"
            android:layout_margin="2dp"
            android:layout_gravity="right"
            android:text="0" />

        <TextView
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:id="@+id/mTotalRevenue"
            android:textSize="24dp"
            android:layout_margin="2dp"
            android:layout_gravity="right"
            android:text="€ 0.00" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"></RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:background="#FFFFFF"
        android:layout_gravity="right">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/verticalLayoutCounters"
            android:gravity="right">

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"></RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/counters_back"
            android:text="@string/nav_back" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/counters_next"
            android:text="@string/nav_next" />
    </LinearLayout>

</LinearLayout>